--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 e.preventDefault();
                 e.stopImmediatePropagation();
             }
-        });
+        );
     </script>
     <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-KM8VYVLN61"></script>
@@ -314,27 +314,112 @@
             <path id="projectsvg" d="" />
         </svg>
         <span>Publications <i class="fas fa-project-diagram"></i></span>
-        
-        <div class="project-card" data-aos="zoom-in-up" data-aos-duration="2000">
-            <!--Use the sample tempalte below for other projects of urs-->
-            <!-- <img src="/asset/img/project1.png" alt=""> -->
-            <div class="title">Fake News Detection System Using Featured-Based Optimized MSVM Classification </div>
-            <div class="dec">
-                <p> A novel fake news detection system, published in IEEE Access Journal</p>
-                <br> <a href=https://doi.org/10.1109/ACCESS.2022.3216892>DOI</a>
-                <!-- <br> <a href="https://github.com/sakshamchecker/SateliteImageClassification">Github</a> -->
 
+        <div class="project-card" data-aos="zoom-in-up" data-aos-duration="2000">
+            <div class="title"> Feature Aggregation with Latent Generative Replay for Federated Continual Learning of Socially Appropriate Robot Behaviours</div>
+            <div class="author">Nikhil Churamani, <em>Saksham Checker</em>, Hao-Tien Lewis Chiang, Hatice Gunes</div>
+            <div class="dec">
+                <p> A Federated Continual Learning study on SocRobs</p>
+                <!-- <br> <a href="https://doi.org/10.48550/arXiv.2403.07586">DOI</a> -->
+                <a href="/publications/FCLSocRob/bibtex.html">Bibtex</a>
+                <a href="/publications/FCLSocRob/FCLSocRob.pdf">PDF</a>
+
+                <meta name="citation_title" content="Feature Aggregation with Latent Generative Replay for Federated Continual Learning of Socially Appropriate Robot Behaviours">
+                <meta name="citation_author" content="Churamani, Nikhil">
+                <meta name="citation_author" content="Checker, Saksham">
+                <meta name="citation_author" content="Chiang, Hao-Tien Lewis">
+                <meta name="citation_author" content="Gunes, Hatice">
+                <meta name="citation_publication_date" content="2024">
+                <meta name="citation_pdf_url" content="/publications/FCLSocRob/FCLSocRob.pdf">
+            </div>
+        </div>
+        <div class="project-card" data-aos="zoom-in-up" data-aos-duration="2000">
+            <div class="title"> Federated Learning of Socially Appropriate Agent Behaviours in Simulated Home Environments</div>
+            <div class="author"><em>Saksham Checker</em>, Nikhil Churamani, Hatice Gunes</div>
+            <div class="dec">
+                <p> A Federated Learning Study presented in ACM/IEEE HRI2024</p>
+                <br> <a href="https://doi.org/10.48550/arXiv.2403.07586">DOI</a>
+                <a href="/publications/FLSocRob/bibtex.html">Bibtex</a>
+                <a href="/publications/FLSocRob/FLSocRob.pdf">PDF</a>
+                <meta name="citation_title" content="Federated Learning of Socially Appropriate Agent Behaviours in Simulated Home Environments">
+                <meta name="citation_author" content="Checker, Saksham">
+                <meta name="citation_author" content="Churamani, Nikhil">
+                <meta name="citation_author" content="Gunes, Hatice">
+                <meta name="citation_publication_date" content="2024/03/12">
+                <meta name="citation_conference_title" content="Workshop on Lifelong Learning and Personalization in Long-Term Human-Robot Interaction (LEAP-HRI), 19th ACM/IEEE International Conference on Human-Robot Interaction (HRI)">
+                <meta name="citation_pdf_url" content="/publications/FLSocRob/FLSocRob.pdf">
+                <meta name="citation_doi" content="10.48550/arXiv.2403.07586">
+            </div>
+        </div>
+        <div class="project-card" data-aos="zoom-in-up" data-aos-duration="2000">
+            <div class="title">A Survey on Intrusion Detection System for IoT Networks Based on Artificial Intelligence </div>
+            <div class="author"><em>Saksham Checker</em>, Madhuri Yadav, Rahul Katarya</div>
+            <div class="dec">
+                <p> A Survey on IDS presented in IEEE ELEXCOM2023</p>
+                <br> <a href=https://doi.org/10.1109/ACCESS.2022.3216892>DOI</a>
+                <a href="/publications/IOT_intrusion/bibtex.html">Bibtex</a>
+                <a href="https://ieeexplore.ieee.org/document/10370067">PDF</a>
+
+                <meta name="citation_title" content="A Survey on Intrusion Detection System for IoT Networks Based on Artificial Intelligence">
+                <meta name="citation_author" content="Checker, Saksham">
+                <meta name="citation_author" content="Yadav, Madhuri">
+                <meta name="citation_author" content="Katarya, Rahul">
+                <meta name="citation_publication_date" content="2023/01/01">
+                <meta name="citation_conference_title" content="2023 International Conference on Electrical, Electronics, Communication and Computers (ELEXCOM)">
+                <meta name="citation_firstpage" content="1">
+                <meta name="citation_lastpage" content="6">
+                <meta name="citation_doi" content="10.1109/ELEXCOM58812.2023.10370067">
+                <meta name="citation_pdf_url" content="https://ieeexplore.ieee.org/document/10370067">
             </div>
         </div>
 
+        <div class="project-card" data-aos="zoom-in-up" data-aos-duration="2000">
+            <div class="title">Fake News Detection System Using Featured-Based Optimized MSVM Classification </div>
+            <div class="author">Ravish, Rahul Katarya, Deepak Dahiya, <em>Saksham Checker</em></div>
+            <div class="dec">
+                <p> A novel fake news detection system, published in IEEE Access Journal</p>
+                <br> <a href=https://doi.org/10.1109/ACCESS.2022.3216892>DOI</a>
+
+                <a href="/publications/FakeNews/bibtex.html">Bibtex</a>
+                <a href="/publications/FakeNews/Fake_News_Detection_System_Using_Featured-Based_Optimized_MSVM_Classification.pdf">PDF</a>
+                <meta name="citation_title" content="Fake News Detection System Using Featured-Based Optimized MSVM Classification">
+                <meta name="citation_author" content="Ravish">
+                <meta name="citation_author" content="Katarya, Rahul">
+                <meta name="citation_author" content="Dahiya, Deepak">
+                <meta name="citation_author" content="Checker, Saksham">
+                <meta name="citation_publication_date" content="2022/12/25">
+                <meta name="citation_journal_title" content="IEEE Access">
+                <meta name="citation_volume" content="10">
+                <meta name="citation_issue" content="">
+                <meta name="citation_firstpage" content="113184">
+                <meta name="citation_lastpage" content="113199">
+                <meta name="citation_pdf_url" content="/publications/FakeNews/Fake_News_Detection_System_Using_Featured-Based_Optimized_MSVM_Classification.pdf">
+            </div>
+        </div>
 
         <div class="project-card" data-aos="zoom-in-up" data-aos-duration="2000">
             <!--Use the sample tempalte below for other projects of urs-->
             <!-- <img src="/asset/img/project1.png" alt=""> -->
             <div class="title">Solar Panels Crack Detection using Overhead Images</div>
+            <div class="author"><em>Saksham Checker</em>, Saksham Gupta, J. P. Kesari</div>
             <div class="dec">
                 <p> A CNN based Solar Panel Crack Detection, Published in IJRASET</p>
                 <br> <a href="https://dx.doi.org/10.22214/ijraset.2021.38532">DOI</a>
+                <a href="/publications/Solar/bibtex.html">Bibtex</a>
+                <a href="/publications/Solar/SolarPanel.pdf">PDF</a>
+
+                <meta name="citation_title" content="Solar Panels Crack Detection using Overhead Images">
+                <meta name="citation_author" content="Saksham Checker">
+                <meta name="citation_author" content="Saksham Gupta">
+                <meta name="citation_author" content="J. P. Kesari">
+                <meta name="citation_publication_date" content="2021/10/01">
+                <meta name="citation_journal_title" content="International Journal for Research in Applied Science and Engineering Technology (IJRASET)">
+                <meta name="citation_volume" content="9">
+                <meta name="citation_issue" content="X">
+                <meta name="citation_firstpage" content="855">
+                <meta name="citation_lastpage" content="859">
+                <meta name="citation_pdf_url" content="/publications/Solar/SolarPanel.pdf">
+
                 <!-- <br> <a href="https://github.com/sakshamchecker/SateliteImageClassification">Github</a> -->
 
             </div>
@@ -343,9 +428,22 @@
             <!--Use the sample tempalte below for other projects of urs-->
             <!-- <img src="/asset/img/project1.png" alt=""> -->
             <div class="title">CNFMD: Convolutional Network-based Face Mask Detection </div>
+            <div class="author"><em>Saksham Checker</em></div>
             <div class="dec">
                 <p> Face mask detection study published in World Journal of Advanced Research and Reviews</p>
                 <br> <a href=https://doi.org/10.30574/wjarr.2022.13.2.0142>DOI</a>
+                <a href="/publications/Covid/bibtex.html">Bibtex</a>
+                <a href="/publications/Covid/Covid19.pdf">PDF</a>
+                <meta name="citation_title" content="CNFMD: Convolutional Network-based face mask detection">
+                <meta name="citation_author" content="Checker, Saksham">
+                <meta name="citation_publication_date" content="2022/02/11">
+                <meta name="citation_journal_title" content="World Journal of Advanced Research and Reviews">
+                <meta name="citation_volume" content="13">
+                <meta name="citation_issue" content="2">
+                <meta name="citation_firstpage" content="232">
+                <meta name="citation_lastpage" content="238">
+                <meta name="citation_doi" content="10.30574/wjarr.2022.13.2.0142">
+                <meta name="citation_pdf_url" content="/publications/Covid/Covid19.pdf">
                 <!-- <br> <a href="https://github.com/sakshamchecker/SateliteImageClassification">Github</a> -->
 
             </div>
